AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libplm_util.la
libplm_util_la_SOURCES=plm_buffer.c plm_lookaside_list.c plm_mempool.c \
	plm_sync_mech.c plm_string.c plm_log.c plm_comm.c plm_threads.c \
	plm_http.c http_parser.c plm_event.c plm_epoll.c plm_timer.c \
	plm_hash.c
libplm_util_la_LDFLAGS=-lpthread

